--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
   "extends": ["eslint:recommended", "plugin:prettier/recommended"],
   "env": {
     "node": true,
-    "es6": true
+    "es6": true,
+    "jest": true
   },
   "plugins": ["prettier"],
   "rules": {
