--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "nodemon --exec babel-node ./src/index.js",
     "build": "babel ./src --out-dir build",
     "serve": "node build/index.js",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "test": "jest --detectOpenHandles"
   },
   "husky": {
     "hooks": {
@@ -18,9 +19,10 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
-    "@babel/core": "^7.12.3",
+    "@babel/core": "^7.12.10",
     "@babel/node": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.7",
     "@hapi/code": "^8.0.2",
     "@hapi/lab": "^24.1.0",
     "@types/bcryptjs": "^2.4.2",
@@ -37,10 +39,14 @@
     "@hapi/hapi": "^20.0.3",
     "@hapi/inert": "^6.0.3",
     "@hapi/joi": "^17.1.1",
+    "babel-jest": "^26.6.3",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
+    "formidable": "^1.2.2",
     "hapi-auth-jwt2": "^10.2.0",
+    "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "pg": "^8.5.1",
     "typeorm": "^0.2.29"
   }
